Namespacing fix for a too general css rule for wikieditor dialogs
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@62585 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/css/combined.css
+++ b/extensions/UsabilityInitiative/css/combined.css
@@ -341,7 +341,8 @@ body.ltr .wikiEditor-toolbar-dialog .ui-dialog-titlebar-close {
 .wikieditor-toolbar-dialog-hint {
 	color: #999999;
 }
-.ui-widget-content {
+.wikiEditor-toolbar-dialog,
+.wikiEditor-toolbar-dialog .ui-widget-content {
 	border: none !important;
 }
 /* Table Dialog */
